Allow to override foreign total of investment transaction

In case an investment is denominated in one currency and the brokerage
account is denominated in another currency, it was not possible to
adjust the exchange rate for the two in the total amount widget.

This change allows to override the foreign amount of the total amount
widget.

BUG: 494072
FIXED-IN: 5.2